--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -45,16 +45,16 @@
           </a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/perupa/">Perupa</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/perupa/">Perupa</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/karya/">Karya</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/karya/">Karya</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/acara/">Acara</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/acara/">Acara</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/tentangkami/">Tentang Kami</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/tentangkami/">Tentang Kami</a>
         </li>
       </ul>
     </nav>
