--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -40,21 +40,21 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="index.html">
+          <a class="js-scroll-trigger" href="http://185.201.9.184">
             <img src="{% static 'img/logomenu.png' %}">
           </a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/perupa/">Perupa</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/perupa">Perupa</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/karya/">Karya</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/karya">Karya</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/acara/">Acara</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/acara">Acara</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/tentangkami/">Tentang Kami</a>
+          <a class="js-scroll-trigger" href="http://185.201.9.184/tentangkami">Tentang Kami</a>
         </li>
       </ul>
     </nav>
@@ -71,24 +71,24 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="{% static 'img/slider1.png' %}" alt="First slide">
+              <img class="d-block w-100" src="{% static 'img/slide1.png' %}" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Suasana Pasar</h3>
-                <p>Henk Ngantung</p>
+                <h3>Upacara Asah Pangur</h3>
+                <p>I Gusti Ketut Kobot</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="{% static 'img/slider1.png' %}" alt="Second slide">
+              <img class="d-block w-100" src="{% static 'img/slide2.png' %}" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Suasana Pasar</h3>
-                <p>Henk Ngantung</p>
+                <h3>Gelombang Laut</h3>
+                <p>Wilhelmus Jean Frederic Imandt</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="{% static 'img/slider1.png' %}" alt="Third slide">
+              <img class="d-block w-100" src="{% static 'img/slide3.png' %}" alt="Third slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Suasana Pasar</h3>
-                <p>Henk Ngantung</p>
+                <h3>Tarian Bali</h3>
+                <p>Ida Bagus Made Narendra</p>
               </div>
             </div>
           </div>
