--- a/homepage/templates/tentangkami.html
+++ b/homepage/templates/tentangkami.html
@@ -1,67 +1,7 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Singgasana Seni</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'vendor/simple-line-icons/css/simple-line-icons.css' %}" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
-
-  </head>
-
-  <body id="page-top">
-
-    <!-- Navigation -->
-    <a class="menu-toggle" href="#">
-      <i class="fas fa-bars"></i>
-    </a>
-
-    <!--search-->
-    <span class="searchdiv">
-      <input type="text" class="txtsearch" placeholder="Search...">
-      <a href="#"><i class="fas fa-search btnsearch"></i></a>
-    </span>
-
-    <nav id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="index.html">
-            <img src="{% static 'img/logomenu.png' %}">
-          </a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/perupa/">Perupa</a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/karya/">Karya</a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/acara/">Acara</a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="Http://localhost:8000/tentangkami/">Tentang Kami</a>
-        </li>
-      </ul>
-    </nav>
-    
-   
-
-
+    {% block content %}
               <div class="headerabout">
                 <div class="caption">
                   <span class="border" style="border: none !important;">SINGGASANA <br> SENI</span>
@@ -82,17 +22,5 @@
                 </p>
               </div>
 
+    {% endblock %}
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
-
-  </body>
-
-</html>
