--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -1,57 +1,109 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
 
 {% block content %}
+    <article>
+      <div class="container-fluid">
+       
+          <div class="row">
+            <div class="col-md-12 sectionkoleksi">
+              <span class="divkoleksi divkarya">
+                <h3>Koleksi > Lukisan</h3>
+              </span>
+              <div class="formsearchkarya">
+                <form method="GET" action="">
+                    <input type="text" name="q" placeholder="Search collection and artist">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                  </a>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="row bgkarya">
+             <div class="col-md-12 sectionkoleksi">
+              <span class="divkoleksi">
+                page {{ karya.number }}/{{ karya.paginator.num_pages }}
+                <span class="pagingkarya">
+                     <ul class="pagination">
+                        {% if karya.has_previous %}
+                            <a href="?page={{ karya.previous_page_number }}"><</a>
+                        {% endif %}
 
-    <header class="pageperupa">
-       <div class="container karyacontainer">
-        <div class="row text-center text-lg-left">
-            {% for karya in Karya %}
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb lithumb">
-                    <div class="thumbnail_list">
-                        <a href="/karya/{{ karya.id }}" class="d-block mb-4 h-100">
-                            <img class="img-fluid imgtum imgkarya potraitthumb" src="/media/{{ karya.Gambar }}" alt="">
-                            <div class="middle">
-                                <div class="text"><i class="fas fa-link"></i></div>
-                            </div>
-                        </a>
-                    </div>
+                        {% for i in karya.paginator.page_range %}
+                            {% if karya.number == i %}
+                                <li class="active"><span>{{ i }}<span class="sr-only">(current)</span></span></li>
+                            {% else %}
+                                <li><a href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
 
-                    <div class="descthumb">
-                        <label>{{ karya.Judul }}</label><br>
-                        <label>{{ karya.Perupa.Panggilan }}</label>
+                        {% if karya.has_next %}
+                            <a href="?page={{ karya.next_page_number }}"> > </a>
+                        {% endif %}
+                     </ul>
+                </span>
+              </span>
+            </div>
+
+              <header class="pageperupa">
+                <div class="container karyacontainer">
+                    <div class="row text-center text-lg-left">
+                         {% for Karya in karya %}
+                             <div class="col-lg-3 col-md-4 col-xs-6 thumb lithumb">
+                                <div class="thumbnail_list">
+                                    <a href="/karya/{{ Karya.id }}" class="d-block mb-4 h-100">
+                                        <img class="img-fluid imgtum imgkarya potraitthumb" src="/media/{{ Karya.Gambar }}" alt="">
+                                            <div class="middle">
+                                                <div class="text"><i class="fas fa-link"></i></div>
+                                             </div>
+                                     </a>
+                                </div>
+
+                                <div class="descthumb">
+                                    <label>{{ Karya.Judul }}</label><br>
+                                    <a href="/perupa/{{ Karya.Perupa.id }}"><label>{{ Karya.Perupa.Panggilan }}</label></a>
+                                </div>
+                             </div>
+                        {% endfor %}
                     </div>
                 </div>
-            {% endfor %}
-         </div>
-       </div>
-    </header>
+              </header>
+          </div>
+      </div>
+    </article>
 
 
-    {% if Karya.has_other_pages %}
-        <nav aria-label="Page navigation example" style="margin: 0 auto;">
-            <ul class="pagination">
-                {% if Karya.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page={{ Karya.previous_page_number }}">&laquo;</a></li>
-                {% else %}
-                    <li class="disabled"><span>&laquo;</span></li>
-                {% endif %}
+    <!--popups-->
+    <article class="popups">
+      <a href="#" class="closepop">
+        <i class="fa fa-times-circle"></i>
+      </a>
+      <section class="toppoups">&nbsp;</section>
+      <section class="centerpopups">
+         <a href="#">
+          <span class="arrowleftkarya">
+            <i class="fa fa-angle-left" aria-hidden="true"></i>
+          </span>
+        </a>
 
-                {% for i in Karya.paginator.page_range %}
-                    {% if Karya.number == i %}
-                        <li class="active"><span>{{ i }}<span class="sr-only">(current)</span></span></li>
-                     {% else %}
-                        <li><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                    {% endif %}
-                {% endfor %}
-
-                {% if Karya.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ Karya.next_page_number }}">&raquo;</a></li>
-                {% else %}
-                    <li class="disabled"><span>&raquo;</span></li>
-                 {% endif %}
-            </ul>
-        </nav>
-    {% endif %}
+        <img src="/media/{{ karya.Gambar }}">
+       
+        <a href="#">
+          <span class="arrowrightkarya">
+            <i class="fa fa-angle-right" aria-hidden="true"></i>
+          </span>
+        </a>
+      </section>
+      <section class="bottompop">
+        <h3>{{ karya.Judul }}</h3>
+        <p>
+          <i>Lorem ipsum Lorem ipsum</i><Br>
+          ca.1065<br>
+          Oil and Canvas<br>
+          120 x 145 cm
+        </p>
+      </section>
+    </article>
 
 
 {% endblock %}
