--- a/singgasanaseni/templates/perupa/detail.html
+++ b/singgasanaseni/templates/perupa/detail.html
@@ -19,9 +19,6 @@
              </div>
 
         </div>
-
-
-
     </section>
 
 
@@ -36,7 +33,7 @@
           <div class="col-lg-3 col-md-4 col-xs-6 thumb lithumb">
             <div class="thumbnail_list">
               <a href="" class="d-block mb-4 h-100">
-                <img class="img-fluid imgtum imgkarya potraitthumb" src="/media/{{ karya.Gambar }}" alt="">
+                <img class="img-fluid imgtum imgkarya potraitthumb" src="/media/{{ Karya.Gambar }}" alt="">
                   <div class="middle">
                     <div class="text"><i class="fas fa-link"></i></div>
                   </div>
