--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -23,41 +23,78 @@
 
     <!-- Custom CSS -->
     <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
+    <script src="{% static 'js/modernizr.custom.js' %}"></script>
+
+  </head>
 
   </head>
 
   <body id="page-top">
-
-
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar cbp-hsmenu-wrapper" id="cbp-hsmenu-wrapper">
         <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="/">
+           <div class="navbar-header">
+            <a class="navbar-brand" href="#">
               <img src="{% static 'img/logo.jpg' %}">
             </a>
           </div>
-          <ul class="nav">
-            <li><a href="{% url 'karya-list' %}">Koleksi</a></li>
-            <li><a href="{% url 'perupa-list' %}">Perupa</a></li>
-            <li><a href="{% url 'istana-list' %}">Istana</a></li>
-            <li><a href="#">Publikasi</a></li>
-            <li><a href="{% url 'acara-list' %}">Berita</a></li>
-            <li><a href="{% url 'tentang-kami' %}">Tentang Kami</a></li>
-            <li>
-                <form class="navbar-form navbar-right">
+
+          <div class="cbp-hsinner">
+            <ul class="cbp-hsmenu">
+              <li>
+                <a href="#">Koleksi</a>
+                <ul class="cbp-hssubmenu">
+                  <li class="menufirst"><a href="#"><i>Koleksi benda seni</i></a></li>
+                  <li><a href="/karya/">Lukisan</a></li>
+                  <li><a href="/karya/">Patung</a></li>
+                  <li><a href="/karya/">Kriya</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="/perupa/">Perupa</a>
+              </li>
+              <li>
+                <a href="#">Istana</a>
+                <ul class="cbp-hssubmenu">
+                  <li class="menufirst"><a href="#"><i>Istana kepresidenan</i></a></li>
+                  <li><a href="/istana/">Istana Merdeka</a></li>
+                  <li><a href="/istana/">Istana Negara</a></li>
+                  <li><a href="/istana/">Istana Bogor</a></li>
+                  <li><a href="/istana/">Istana Tampaksiring</a></li>
+                  <li><a href="/istana/">Istana Cipanas</a></li>
+                  <li><a href="/istana/">Istana Yogyakarta</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Publikasi</a></li>
+              <li><a href="/berita/">Berita</a></li>
+              <li><a href="/tentangkami/">Tentang Kami</a></li>
+              <li>
+                   <form class="navbar-form navbar-right">
                   <div class="input-group">
                     <input type="text" class="form-control formsearch" placeholder="Search" name="search">
                     <div class="input-group-btn">
-                        <a href="#">
+                        <a href="#" onclick="openSearch()">
                           <i class="fa fa-search" aria-hidden="true"></i>
                         </a>
                     </div>
                   </div>
                 </form>
-            </li>
-          </ul>
-        </div>
-      </nav>
+
+                <div id="myOverlay" class="overlay animated fadeIn">
+                  <span class="closebtn" onclick="closeSearch()" title="Close Overlay">x</span>
+                  <div class="overlay-content">
+                    <form>
+                      <input type="text" placeholder="Cari apapun disini..." class="txtsearch" name="search">
+                      <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
+                  </div>
+                </div>
+
+
+              </li>
+            </ul>
+            </div>
+          </div>
+        </nav>
 
         {% block content %}
 `
@@ -67,34 +104,22 @@
         @Singgasana Seni. Hak Cipta dilindungi undang-undang
 
     </footer>
+      <script>
+    function openSearch() {
+        document.getElementById("myOverlay").style.display = "block";
+    }
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    function closeSearch() {
+        document.getElementById("myOverlay").style.display = "none";
+    }
+    </script>
+     {% block js %}
 
-    <!-- Plugin JavaScript -->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    {% endblock %}
 
-    <!-- Custom scripts for this template -->
-    <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
-
-
-    <script type="text/javascript">
-
-        $(document).ready(function() {
-
-          $(".sample1").click(function(){
-            $(".popups").addClass('animated slideInUp').css("display","block");
-          });
-
-          $(".closepop").click(function(){
-            $(".popups").css("display","none");
-            $(".popups").addClass('animated slideOutUp');
-
-          });
-
-
-        });
+    <script src="{% static 'js/cbpHorizontalSlideOutMenu.min.js' %}"></script>
+    <script>
+      var menu = new cbpHorizontalSlideOutMenu( document.getElementById( 'cbp-hsmenu-wrapper' ) );
     </script>
 
 
