--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -4,27 +4,52 @@
 {% block content %}
     <article>
       <div class="container-fluid">
-       
+
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
                 <h3>Koleksi > Lukisan</h3>
               </span>
-              <div class="formsearchkarya">
-                <form method="GET" action="">
+              <div class="sectionfilter">
+                <div class="filterkarya">
+                  <label class="filtermenu" style="padding: 0;">Filter</label>
+                  <div class="filtermenu jeniskarya ">
+                    <a id="link1">Jenis benda seni +</a>
+                    <ul id="jenisbenda" class="jenisbenda">
+                      <li><a href="#">Patung</a></li>
+                      <li><a href="#">Lukisan</a></li>
+                      <li><a href="#">Kriya</a></li>
+                    </ul>
+                  </div>
+                  <div class="filtermenu temakarya">
+                    <a id="link2">Tema +</a>
+                    <ul id="jenistema" class="jenisbenda">
+                      <li><a href="#">list 1</a></li>
+                      <li><a href="#">list 2</a></li>
+                      <li><a href="#">list 3</a></li>
+                      <li><a href="#">list 4</a></li>
+                      <li><a href="#">list 5</a></li>
+                      <li><a href="#">list 6</a></li>
+                    </ul>
+                  </div>
+
+                </div>
+                <div class="formsearchkarya">
+                  <form method="GET" action="">
                     <input type="text" name="q" placeholder="Search collection and artist">
                     <i class="fa fa-search" aria-hidden="true"></i>
                   </a>
                 </form>
+                </div>
               </div>
             </div>
           </div>
           <div class="row bgkarya">
              <div class="col-md-12 sectionkoleksi">
-              <span class="divkoleksi">
-                page {{ karya.number }}/{{ karya.paginator.num_pages }}
+              <span class="divkoleksi" style="border: none;">
+                <h3>page {{ karya.number }}/{{ karya.paginator.num_pages }}</h3>
                 <span class="pagingkarya">
-                     <ul class="pagination">
+                    <ul class="pagination">
                         {% if karya.has_previous %}
                             <a href="?page={{ karya.previous_page_number }}"><</a>
                         {% endif %}
@@ -45,29 +70,28 @@
               </span>
             </div>
 
-              <header class="pageperupa">
-                <div class="container karyacontainer">
-                    <div class="row text-center text-lg-left">
-                         {% for Karya in karya %}
-                             <div class="col-lg-3 col-md-4 col-xs-6 thumb lithumb">
-                                <div class="thumbnail_list">
-                                    <a href="/karya/{{ Karya.id }}" class="d-block mb-4 h-100">
-                                        <img class="img-fluid imgtum imgkarya potraitthumb" src="/media/{{ Karya.Gambar }}" alt="">
-                                            <div class="middle">
-                                                <div class="text"><i class="fas fa-link"></i></div>
-                                             </div>
-                                     </a>
-                                </div>
+            <div class="col-md-12">
+              <div class="row seckarya">
+                  {% for Karya in karya %}
+                  <div class="col-md-3 perupalist karyalist">
+                    <a href="#" class="sample1">
+                      <img src="/media/{{ Karya.Gambar }}" class="">
+                        <figcaption>
+                           <h3>{{ Karya.Perupa }}</h3>
+                            <p>
+                              <i>{{ Karya.Judul }}</i><Br>
+                              {{ Karya.Material }}<br>
+                              {{ Karya.Dimensi }}<br>
+                            </p>
+                        </figcaption>
+                    </a>
+                  </div>
+                  {% endfor %}
 
-                                <div class="descthumb">
-                                    <label>{{ Karya.Judul }}</label><br>
-                                    <a href="/perupa/{{ Karya.Perupa.id }}"><label>{{ Karya.Perupa.Panggilan }}</label></a>
-                                </div>
-                             </div>
-                        {% endfor %}
-                    </div>
-                </div>
-              </header>
+
+
+              </div>
+            </div>
           </div>
       </div>
     </article>
@@ -76,7 +100,7 @@
     <!--popups-->
     <article class="popups">
       <a href="#" class="closepop">
-        <i class="fa fa-times-circle"></i>
+        <i class="fa fa-times"></i>
       </a>
       <section class="toppoups">&nbsp;</section>
       <section class="centerpopups">
@@ -86,8 +110,8 @@
           </span>
         </a>
 
-        <img src="/media/{{ karya.Gambar }}">
-       
+        <img src="/media/{{ detail.Gambar }}">
+
         <a href="#">
           <span class="arrowrightkarya">
             <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -95,7 +119,7 @@
         </a>
       </section>
       <section class="bottompop">
-        <h3>{{ karya.Judul }}</h3>
+        <h3>Artist Name</h3>
         <p>
           <i>Lorem ipsum Lorem ipsum</i><Br>
           ca.1065<br>
@@ -106,4 +130,43 @@
     </article>
 
 
+{% endblock %}
+
+{% block js %}
+     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
+
+
+    <script type="text/javascript">
+
+        $(document).ready(function() {
+
+          $(".sample1").click(function(){
+            $(".popups").fadeToggle();
+            //$(".popups").addClass('animated slideInUp').css("display","block");
+          });
+
+          $(".closepop").click(function(){
+            $(".popups").fadeToggle();
+            //$(".popups").css("display","none");
+           /* $(".popups").addClass('animated slideOutUp');*/
+
+          });
+
+           $("#link1").click(function(){
+              $("#jenisbenda").slideToggle();
+           });
+
+            $("#link2").click(function(){
+              $("#jenistema").slideToggle();
+           });
+
+        });
+    </script>
 {% endblock %}
