penambahan di gitignore

--- a/singgasanaseni/templates/acara/index.html
+++ b/singgasanaseni/templates/acara/index.html
@@ -34,7 +34,7 @@
             <div class="col-md-7 isiberita">
               <img src="{% static 'img/slider1.png' %}" class="imgartikel">
               <div class="heading">
-                <label class="date">17/08/2017</label>
+                <label class="date">17/08/2019s</label>
                 <h3>konstruksi konstruksikonstruksikonstruksi </h3>
                 <label class="title">konstruksi konstruksikonstruksikonstruksi  konstruksi konstruksikonstruksikonstruksi </label>
               </div>
